--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
                 <br><a href="https://egersund.ua/shops/4" class="link_2">ПРО МАГАЗИН</a>
             </li>
         </ul>
+        <a class="link_3" href="https://egersund.ua/history">Джерело</a>
+        <p>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="Правильний CSS!" />
+            </a>
+        </p>
     </footer>
 
 </body>
